--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
